@@ -1,3 +1,7 @@
+== LATEST
+
+ * Update spec_task for RSpec 2.
+
 == 0.2.0 2011-02-08
 
  * Extension support.
